Adding local lenguaje function

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -29,37 +29,37 @@
 # To learn more, please read the Rails Internationalization guide
 # available at https://guides.rubyonrails.org/i18n.html.
 
-en:
+es:
   hello: "Hello world"
   email: "email"
-  email_address: "Email address"
-  password: "Password"
-  log_in: "Log in"
-  sign_up: "Sign up"
-  forgot_your_password: "Forgot your password?"
-  didnt_recive_confirmation: "Didn't receive confirmation instructions?"
-  didnt_recive_unlock: "Didn't receive unlock instructions?"
+  email_address: "Direcion email"
+  password: "Contraseña"
+  log_in: "Ingresar"
+  sign_up: "Crear usuario"
+  forgot_your_password: "Contraseña olvidada?"
+  didnt_recive_confirmation: "No recivio correo de confirmacion?"
+  didnt_recive_unlock: "No recibio instruciones de desbloqueo?"
 
-  home: "Home"
-  help: "Help"
+  home: "Inicio"
+  help: "Ayuda"
   admin: "Admin"
-  creditors: "Creditors"
-  profile: "Edit profile"
-  salir: "Log out"
+  creditors: "Creditos"
+  profile: "Perfil"
+  salir: "Salir"
 
-  amount_borrowed: "Amount borrowed"
-  balance: "Balance"
-  loans_granted: "Loans granted"
-  next_total_payment: "Next total payment"
-  profit_paid: "Profit paid"
-  retrazados: "Delayed"
-  al_corriente: "Aware"
-  pagados: "Paied"
-  cerrados: "Closed"
+  amount_borrowed: "Cantidad prestada"
+  profit:
+  balance: "Saldo"
+  loans_granted: "Prestamos otorgados"
+  next_total_payment: "Total proximo pago"
+  profit_paid: "Ganancia pagada"
+  retrazados: "Retrazados"
+  al_corriente: "Al corriente"
+  pagados: "Pagados"
+  cerrados: "Cerrados"
 
-  more: "more"
-  account: "Acount number"
-  add_new_loan: "Add new Loan"
+  more: "mas"
+  account: "Numero de cuenta"
+  add_new_loan: "Nuevo Prestamo"
 
-  search: "Search"
-
+  search: "Buscar"
