--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,6 +56,7 @@ en:
   al_corriente: "Aware"
   pagados: "Paied"
   cerrados: "Closed"
+  todos: "All"
 
   more: "more"
   account: "Acount number"
