Move the data of profit to the loans itself

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -129,6 +129,11 @@ es:
         moneylender: "Prestador"
         status_id: "Estado"
         amount_borrowed: "Monto prestamo"
+        is_profit_balane: "Int saldo insoluto"
+        description: "Descripcion"
+        payment_frequency_days: "Frec. de pago(dias)"
+        number_of_payments: "Numeros de pagos"
+        profit_by_payment: "Interes por cada pago"
         loan_type_id: "Tipo prestamo"
         user_id: "A quien se presta"
         loan_date: "Fecha del prestamo"
